# autorun

./: .coverage  .gemini-integration-baseline.txt  .gitignore  CLAUDE.md  GEMINI.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  INTEGRATION_GUIDE.md  LICENSE  Makefile  README.md  REGRESSION_ANALYSIS.md  agent_sdk_hook.py  aix.toml  autorun-architecture.mmd  autorun-ux.md  autorun-ux.mmd  claude_code_plugin.py  clautorun-architecture.mmd  clautorun.py  commands  coverage.xml  gemini-extension.json  hooks  main.py  marketplace.json  mcp_server.py  migrate-blocking-v1-to-v2.sh  pyproject.toml  run_ci_local.sh  run_tests.py  simple_test.py  skills  test_interactive.py  update-v0.4.0.sh  update-v0.5.0.sh
.claude-plugin/: marketplace.json  (+1 more)
plugins/autorun/: CLAUDE.md  GEMINI.md  HOOK_ARCHITECTURE.md  MANIFEST.in  Makefile  TROUBLESHOOTING.md  autorun.py  build_support.py  conftest.py  gemini-extension.json  pyproject.toml  setup.py
plugins/autorun/.claude-plugin/: marketplace.json  plugin.json
plugins/autorun/.codex-plugin/: plugin.json
plugins/autorun/agents/: cli-test-automation.md  tmux-session-automation.md
plugins/autorun/commands/: a.md  afs.md  autoproc.md  autorun  blocks.md  cache.md  claude-code-plugin-help.md  clautorun  clear.md  commit.md  estop.md  f.md  find.md  gemini.md  globalclear.md  globalno.md  globalok.md  globalstatus.md  go.md  gp.md  j.md  justify.md  marketplace-test-exec  marketplace-test.md  no.md  ok.md  pe-cfg.md  pe-off.md  pe-on.md  pe-rej.md  philosophy.md  planexport-configure.md  planexport-dir.md  planexport-enable.md  planexport-pattern.md  planexport-rejected-dir.md  planexport-reset.md  planexport.md  plannew.md  planprocess.md  (+21 more)
plugins/autorun/demo/: autorun_demo.tape
plugins/autorun/docs/: INTEGRATION_GUIDE.md  RUNTIME_STATE_ISOLATION.md
plugins/autorun/examples/: example_of_importing_and_using_autorun.py
plugins/autorun/hooks/: claude-hooks.json  claude-hooks.json.bak  hook_entry.py  hooks.json
plugins/autorun/scripts/: plan_export_config.py  task_lifecycle_cli.py
plugins/autorun/tests/: conftest.py  e2e_support.py  manual_autorun_on_plan_approval_test.py  simple_test.py  test_actual_command_blocking.py  test_ai_monitor_integration.py  test_aix_manifest_gen.py  test_antigravity_e2e_real_money.py  test_autorun_edge_cases.py  test_backend_e2e_contract.py  test_bang_syntax.py  test_bashlex_heredoc_parsing.py  test_blocking_edge_cases.py  test_blocking_integration.py  test_bootstrap_config.py  test_cache_guard.py  test_capability_snapshot.py  test_claude_e2e_real_money.py  test_cli_integration.py  test_client_fail_closed.py  test_codex_e2e_real_money.py  test_codex_install.py  test_codex_platform.py  test_codex_response_schema.py  test_command_blocking.py  test_command_blocking_comprehensive.py  test_command_detection.py  test_command_discovery.py  test_command_fixes_tmux_ttest.py  test_core.py  test_core_configuration.py  test_daemon_pipe_blocking_integration.py  test_daemon_restart_safety.py  test_daemon_startup_race.py  test_daemon_transcript_truncation.py  test_database_functionality.py  test_demo.py  test_diagnostics.py  test_diagnostics_simple.py  test_documentation_consistency.py  (+98 more)
plugins/clautorun/: CLAUDE.md  GEMINI.md  HOOK_ARCHITECTURE.md  MANIFEST.in  TEST_SUMMARY.md  TROUBLESHOOTING.md  gemini-extension.json  pyproject.toml  requirements.txt
plugins/clautorun/.claude-plugin/: marketplace.json  plugin.json
plugins/clautorun/agents/: cli-test-automation.md  tmux-session-automation.md
plugins/clautorun/commands/: a.md  afa.md  afj.md  afs.md  afst.md  allow.md  autorun.md  claude-code-plugin-help.md  clautorun  estop.md  f.md  find.md  gc.md  gemini.md  globalclear.md  globalno.md  globalok.md  j.md  marketplace-test.md  pe-dir.md  pe-fmt.md  pe-rdir.md  pe-rej.md  pe-reset.md  pe.md  ph.md  planexport-configure.md  planexport-dir.md  planexport-disable.md  planexport-enable.md  planexport-pattern.md  planexport-rejected-dir.md  planexport-rejected.md  planexport-reset.md  planexport.md  plannew.md  planprocess.md  planrefine.md  planupdate.md  pn.md  (+18 more)
plugins/clautorun/docs/: INTEGRATION_GUIDE.md
plugins/clautorun/examples/: example_of_importing_and_using_clautorun.py
plugins/clautorun/hooks/: claude-hooks.json  gemini-hooks.json  hook_entry.py  hooks.json
plugins/clautorun/scripts/: plan_export_config.py  restart_daemon.py  task_lifecycle_cli.py
plugins/clautorun/skills/: CLI_USAGE_AND_TEST_AUTOMATION_WITH_BYOBU_TMUX_SESSIONS.md  FixStubbornBugsFastByParallelizing.md  FixStubbornBugsFastByParallelizing.md.backup  tmux-window-api.md
plugins/clautorun/tests/: conftest.py  manual_autorun_on_plan_approval_test.py  test_actual_command_blocking.py  test_ai_monitor_integration.py  test_autorun_edge_cases.py  test_bang_syntax.py  test_bashlex_heredoc_parsing.py  test_blocking_edge_cases.py  test_blocking_integration.py  test_bootstrap_config.py  test_claude_e2e_real_money.py  test_cli_integration.py  test_command_blocking.py  test_command_blocking_comprehensive.py  test_core.py  test_core_configuration.py  test_daemon_restart_safety.py  test_daemon_transcript_truncation.py  test_diagnostics.py  test_diagnostics_simple.py  test_dual_platform_hooks_install.py  test_dual_platform_response.py  test_e2e_policy_lifecycle.py  test_edge_cases.py  test_edge_cases_comprehensive.py  test_event_context_cwd.py  test_final_integration.py  test_gemini_before_tool_hooks.py  test_gemini_e2e_improved.py  test_gemini_e2e_real_money.py  test_gemini_native_tool_coverage.py  test_git_worktree_cli.py  test_git_worktree_plugin.py  test_git_worktree_utils.py  test_hook.py  test_hook_config.py  test_hook_entry.py  test_hooks_format.py  test_install_pathways.py  test_integration_comprehensive.py  (+44 more)
plugins/pdf-extractor/: CLAUDE.md  README.md  gemini-extension.json  pyproject.toml
plugins/pdf-extractor/.claude-plugin/: plugin.json
plugins/pdf-extractor/commands/: extract.md
plugins/pdf-extractor/tests/: __init__.py  test_backends.py  test_cli.py  test_extractors.py  test_utils.py
plugins/plan-export/: README.md  pyproject.toml  pytest.ini
(+370 files in other folders)
