[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autorun-workspace"
version = "0.9.0"
description = "UV workspace for autorun plugins: autorun, pdf-extractor"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Andrew Hundt", email = "ATHundt@gmail.com"},
]
keywords = ["claude", "claude-code", "marketplace", "plugin-workspace", "autorun", "pdf-extractor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
# No dependencies - this is a workspace definition, not a real package
# CLI entry points come from plugins/autorun/pyproject.toml
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.14.1",
]
all = [
    "autorun>=0.9.0",
    "pdf-extractor>=0.9.0",
]

# NO [project.scripts] - scripts come from plugins/autorun/pyproject.toml

[project.urls]
Homepage = "https://github.com/ahundt/autorun"
Repository = "https://github.com/ahundt/autorun.git"
Issues = "https://github.com/ahundt/autorun/issues"

[tool.uv.workspace]
members = [
    "plugins/autorun",
    "plugins/pdf-extractor",
]

[tool.uv.sources]
autorun = { workspace = true }
pdf-extractor = { workspace = true }

# Minimal stub package for UV workspace
[tool.hatch.build.targets.wheel]
packages = ["src/autorun_workspace"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/plugins",
    "/README.md",
    "/pyproject.toml",
    "/.claude-plugin",
]

[tool.setuptools]
# This package uses hatchling, not setuptools
# This section is for metadata compatibility only

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]
