[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Project name is "clautorun" - the plugin uses "cr" as command prefix for easy typing
name = "clautorun"
version = "0.8.0"
description = "Claude Agent SDK command interceptor that saves tokens by processing autorun commands locally"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Andrew Hundt", email = "ATHundt@gmail.com"},
]
keywords = ["claude", "agent-sdk", "autorun", "cli", "command-interceptor"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "claude-agent-sdk>=0.1.4",
    "ruff>=0.14.1",
    "bashlex>=0.18",
    "psutil",
]

[project.optional-dependencies]
bashlex = ["bashlex>=0.18"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "bashlex>=0.18",
]
claude-code = [
    "claude-agent-sdk>=0.1.4",
]
# All optional features
all = ["bashlex>=0.18"]

[tool.uv]
# WARNING: Do NOT add deprecated fields here (e.g., default-extras).
# UV versions may remove fields, causing stderr warnings when hooks run.
# Claude Code treats ANY hook stderr as "hook error" and ignores the hook
# response (fail-open), which silently disables ALL hook protections.
# If you need to add default extras, put them in [project] dependencies instead.
# Regression test: test_hook_entry.py::TestUVCompatibility

[project.scripts]
clautorun = "clautorun.__main__:main"
claude-session-tools = "clautorun.claude_session_tools:main"

[project.urls]
Homepage = "https://github.com/ahundt/clautorun"
Repository = "https://github.com/ahundt/clautorun.git"
Issues = "https://github.com/ahundt/clautorun/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
clautorun = [
    "../../.claude-plugin/**/*",
    "../../commands/**/*",
    "../../agents/**/*",
    "../../skills/**/*",
    "../../hooks/**/*",
]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src/clautorun",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
timeout = 30
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "plugin: marks tests as plugin tests",
    "hook: marks tests as hook tests",
    "interactive: marks tests as interactive tests",
    "slow: marks tests that take >5s (ThreadSafeDB concurrency, etc.)",
    "subprocess: marks tests that spawn subprocesses",
    "tmux: marks tests that require tmux sessions",
    "e2e: marks end-to-end tests (may require Gemini CLI, real API calls)",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/clautorun"]
omit = [
    # Entry points and system integration
    "src/clautorun/install.py",
    "src/clautorun/mcp_server.py",
    "src/clautorun/python_check.py",
    "src/clautorun/diagnostics.py",
    "src/clautorun/__main__.py",
    # External system integration (requires tmux)
    "src/clautorun/tmux_injector.py",
    "src/clautorun/tmux_utils.py",
    # Test utilities (tested indirectly)
    "src/clautorun/testing_framework.py",
    # Discovery utilities (runtime-dependent)
    "src/clautorun/command_discovery.py",
    # AI monitoring (requires running sessions)
    "src/clautorun/ai_monitor.py",
    # Complex integration modules (require full environment)
    "src/clautorun/injection_monitoring.py",
    # Analysis modules (require complex transcript data)
    "src/clautorun/transcript_analyzer.py",
    "src/clautorun/verification_engine.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    # Exclude fallback code in __init__.py
    "except ImportError:",
    "# Fallback",
    "# If session manager can't be imported",
    "raise ImportError",
    # Exclude try/except blocks that handle optional dependencies
    "except Exception as e:",
    "except Exception:",
    # Exclude logging calls
    "log_info\\(",
    # Exclude pass statements in exception handlers
    "pass  # Silently",
    "pass  # pragma",
]
fail_under = 60

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.1.0",
]
